# lenka

./: .gitignore  README.md  build.py  main.py  package-lock.json  package.json  pyproject.toml  queries.py  requirements.txt  server.py  vercel.json
.build/: data.json  data.ttl  data.xml  en.html  no.html
api/: index.py
public/: prism.css  prism.js  styling.css
src/: index.py  queries.py
src/data/: applications.ttl  communities.ttl  courses.ttl  data-catalogs.ttl  for-beginners.ttl  introductory-resources.ttl  reading-materials.ttl  tags.ttl
src/localizations/en/: main.ftl
src/localizations/no/: main.ftl
src/templates/: index.html
