[project]
name = "lenka"
version = "0.0.1"
description = "README.md"
authors = [
    {name = "Arne Hassel",email = "arne.hassel@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi (>=0.115.8,<0.116.0)",
    "uvicorn (>=0.34.0,<0.35.0)",
    "rdflib (>=7.1.3,<8.0.0)",
    "jinja2 (>=3.1.5,<4.0.0)",
    "fluent-runtime (>=0.4.0,<0.5.0)",
    "markdown (>=3.7,<4.0)"
]


[tool.poetry]
package-mode = false


[tool.poetry.requires-plugins]
poetry-plugin-export = ">=1.8"
